@@ -63,13 +63,13 @@ const std::string Selection::typeName       = "Selection";
 const std::string Selection::containerField = "selection";
 
 Selection::Selection (X3DExecutionContext* const executionContext) :
-	 X3DBaseNode (executionContext -> getBrowser (), executionContext),
-	     enabled (),
-	startEditing (),
-	    children ()
+	X3DBaseNode (executionContext -> getBrowser (), executionContext),
+	    enabled (),
+	     active (),
+	   children ()
 {
 	X3DChildObject::addChildren (enabled,
-	                             startEditing,
+	                             active,
 	                             children);
 }
 
@@ -89,7 +89,7 @@ Selection::addChildren (const MFNode & value)
 			if (child)
 			{
 				if (child -> getExecutionContext () == getBrowser () -> getExecutionContext ())
-					child -> addHandle (&startEditing);
+					child -> addHandle (&active);
 
 				children .emplace_back (child);
 			}
